# src/spa/hotelmanagement/openapi/model/BookingDTO.ts
@@ -1,34 +1,0 @@
-/**
- * OpenAPI definition
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: v0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import * as models from './models';
-
-export interface BookingDTO {
-    details: models.BookingDetailsDTO;
-
-    bookingNo: string;
-
-    bookingState: string;
-
-    arrivalDate: string;
-
-    departureDate: string;
-
-    arrivalTime: models.LocalTime;
-
-    numberOfPersons: number;
-
-    numberOfBookedRooms: number;
-
-    bookingStateTextColorClass: string;
-
-}
