# src/spa/hotelmanagement/openapi/model/BookingDetailsDTO.ts
@@ -1,30 +1,0 @@
-/**
- * OpenAPI definition
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: v0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import * as models from './models';
-
-export interface BookingDetailsDTO {
-    selectedCategoriesRoomCount: { [key: string]: number; };
-
-    guest: models.GuestDTO;
-
-    cardHolderName: string;
-
-    cardNumber: string;
-
-    cardValidThru: string;
-
-    cardCvc: string;
-
-    paymentType: string;
-
-}
